--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0033.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0033.html
@@ -12,7 +12,7 @@
       <span class="ocr_line" title="bbox 925 174 1934 211">
         <span id="w_0" class="ocr_word" title="bbox 925 174 1190 208">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">PRAEFATIO</ins>
+            <ins title="nlp 2.00">PRAEFATIO</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1818 174 1934 211">
@@ -25,8 +25,7 @@
       <span class="ocr_line" title="bbox 185 279 1931 338">
         <span id="w_2" class="ocr_word" title="bbox 185 285 306 325">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">turuB</ins>
-            <del title="nlp 0.90">turuB</del>
+            <ins title="nlp 2.00">turus</ins>
           </span>
         </span>
         <span id="w_3" class="ocr_word" title="bbox 339 281 404 325">
@@ -37,8 +36,7 @@
         </span>
         <span id="w_4" class="ocr_word" title="bbox 439 281 576 325">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">verbJB</ins>
-            <del title="nlp 0.90">verbJB</del>
+            <ins title="nlp 2.00">verbis</ins>
           </span>
         </span>
         <span id="w_5" class="ocr_word" title="bbox 608 284 770 324">
@@ -59,7 +57,7 @@
         </span>
         <span id="w_8" class="ocr_word" title="bbox 943 297 1057 332" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τινι;</ins>
+            <ins title="nlp 2.00">τινες</ins>
           </span>
         </span>
         <span id="w_9" class="ocr_word" title="bbox 1089 280 1132 333" lang="grc">
@@ -77,14 +75,14 @@
             <ins class="alt" title="nlp 1.00">διηνέχθησαν,</ins>
           </span>
         </span>
-        <span id="w_12" class="ocr_word" title="bbox 1692 279 1783 326" lang="grc">
+        <span id="w_12_0" class="ocr_word" title="bbox 1692 279 1783 326">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἕστι</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_13" class="ocr_word" title="bbox 1813 285 1931 334" lang="grc">
+        <span id="w_12_1" class="ocr_word" title="bbox 1692 279 1783 326">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ταδί,</ins>
+            <ins class="alt" title="nlp 2.00">ἔστι</ins>
           </span>
         </span>
       </span>
@@ -139,8 +137,7 @@
         </span>
         <span id="w_22" class="ocr_word" title="bbox 1792 359 1933 398">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">eBsent</ins>
-            <del title="nlp 0.90">eBsent</del>
+            <ins title="nlp 2.00">essent</ins>
           </span>
         </span>
       </span>
@@ -170,17 +167,7 @@
         </span>
         <span id="w_27" class="ocr_word" title="bbox 1080 424 1137 466">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">39</ins>
-          </span>
-        </span>
-        <span id="w_28" class="ocr_word" title="bbox 1142 449 1195 456">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
-        <span id="w_29" class="ocr_word" title="bbox 1199 425 1253 468">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">41</ins>
+            <ins class="alt" title="nlp 2.00">39—41</ins>
           </span>
         </span>
         <span id="w_30" class="ocr_word" title="bbox 1290 425 1396 467">
@@ -589,8 +576,7 @@
         </span>
         <span id="w_103" class="ocr_word" title="bbox 1740 926 1927 969">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nonduni</ins>
-            <del title="nlp 0.90">nonduni</del>
+            <ins title="nlp 2.00">nondum</ins>
           </span>
         </span>
       </span>
@@ -772,8 +758,7 @@
         </span>
         <span id="w_134" class="ocr_word" title="bbox 537 1210 648 1252">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">euim</ins>
-            <del title="nlp 0.90">euim</del>
+            <ins title="nlp 2.00">enim</ins>
           </span>
         </span>
         <span id="w_135" class="ocr_word" title="bbox 682 1209 882 1252">
@@ -834,8 +819,7 @@
         </span>
         <span id="w_144" class="ocr_word" title="bbox 633 1281 798 1323">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nuUum</ins>
-            <del title="nlp 0.90">nuUum</del>
+            <ins title="nlp 2.00">nullum</ins>
           </span>
         </span>
         <span id="w_145" class="ocr_word" title="bbox 846 1282 1028 1337">
@@ -947,8 +931,7 @@
         </span>
         <span id="w_163" class="ocr_word" title="bbox 576 1425 700 1468">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">diiit:</ins>
-            <del title="nlp 0.90">diiit:</del>
+            <ins title="nlp 2.00">dixit:</ins>
           </span>
         </span>
         <span id="w_164" class="ocr_word" title="bbox 733 1440 787 1467" lang="grc">
@@ -1185,8 +1168,7 @@
         </span>
         <span id="w_205" class="ocr_word" title="bbox 1280 1712 1399 1755">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nuUo</ins>
-            <del title="nlp 0.90">nuUo</del>
+            <ins title="nlp 2.00">nullo</ins>
           </span>
         </span>
         <span id="w_206" class="ocr_word" title="bbox 1439 1713 1587 1756">
@@ -1253,18 +1235,8 @@
         </span>
         <span id="w_216" class="ocr_word" title="bbox 658 1856 764 1898">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">med.</ins>
+            <ins class="alt" title="nlp 2.00">med.—48</ins>
             <del title="nlp 0.90">med.</del>
-          </span>
-        </span>
-        <span id="w_217" class="ocr_word" title="bbox 770 1881 823 1886">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
-        <span id="w_218" class="ocr_word" title="bbox 827 1856 883 1898">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">48</ins>
           </span>
         </span>
         <span id="w_219" class="ocr_word" title="bbox 916 1856 1184 1898">
@@ -1369,7 +1341,7 @@
         </span>
         <span id="w_235" class="ocr_word" title="bbox 609 2001 634 2053" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00"> §</ins>
+            <ins title="nlp 2.00">§</ins>
           </span>
         </span>
         <span id="w_236" class="ocr_word" title="bbox 659 1998 716 2041">
@@ -1661,8 +1633,7 @@
         </span>
         <span id="w_284" class="ocr_word" title="bbox 928 2358 1083 2400">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertii</ins>
-            <del title="nlp 0.90">Laertii</del>
+            <ins title="nlp 2.00">Laërtii</ins>
           </span>
         </span>
         <span id="w_285" class="ocr_word" title="bbox 1128 2359 1375 2402">
@@ -1921,8 +1892,7 @@
         </span>
         <span id="w_327" class="ocr_word" title="bbox 833 2645 1028 2687">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertius</ins>
-            <del title="nlp 0.90">Laertius</del>
+            <ins title="nlp 2.00">Laërtius</ins>
           </span>
         </span>
         <span id="w_328" class="ocr_word" title="bbox 1073 2649 1350 2701">
@@ -1945,7 +1915,7 @@
         </span>
         <span id="w_331" class="ocr_word" title="bbox 1749 2648 1822 2690" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἴνα</ins>
+            <ins title="nlp 2.00">ἵνα</ins>
           </span>
         </span>
         <span id="w_332" class="ocr_word" title="bbox 1854 2664 1932 2704" lang="grc">
@@ -1999,17 +1969,11 @@
         </span>
         <span id="w_342" class="ocr_word" title="bbox 1867 2733 1931 2761">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ac-</ins>
+            <ins title="nlp 2.00">accedunt</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 187 2787 1932 2847">
-        <span id="w_343" class="ocr_word" title="bbox 187 2788 341 2830">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cedunt</ins>
-            <del title="nlp 0.90">accedunt</del>
-          </span>
-        </span>
         <span id="w_344" class="ocr_word" title="bbox 367 2788 419 2829">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">ad</ins>
@@ -2097,8 +2061,7 @@
         </span>
         <span id="w_359" class="ocr_word" title="bbox 1152 2862 1357 2904">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">raomenti</ins>
-            <del title="nlp 0.90">raomenti</del>
+            <ins title="nlp 2.00">momenti</ins>
           </span>
         </span>
         <span id="w_360" class="ocr_word" title="bbox 1389 2861 1560 2917">
@@ -2212,8 +2175,7 @@
         </span>
         <span id="w_379" class="ocr_word" title="bbox 1265 3004 1483 3047">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertium</ins>
-            <del title="nlp 0.90">Laertium</del>
+            <ins title="nlp 2.00">Laërtium</ins>
           </span>
         </span>
         <span id="w_380" class="ocr_word" title="bbox 1516 3006 1674 3048">
