--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0034.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0034.html
@@ -38,8 +38,7 @@
         </span>
         <span id="w_4" class="ocr_word" title="bbox 682 298 918 341">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">commmiis</ins>
-            <del title="nlp 0.90">commmiis</del>
+            <ins title="nlp 2.00">communis</ins>
           </span>
         </span>
         <span id="w_5" class="ocr_word" title="bbox 949 298 1093 353">
@@ -68,8 +67,7 @@
         </span>
         <span id="w_9" class="ocr_word" title="bbox 1442 296 1616 340">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Aetium</ins>
-            <del title="nlp 0.90">Aetium</del>
+            <ins title="nlp 2.00">Aëtium</ins>
           </span>
         </span>
         <span id="w_10" class="ocr_word" title="bbox 1643 299 1840 340">
@@ -313,8 +311,7 @@
         </span>
         <span id="w_51" class="ocr_word" title="bbox 542 581 855 638">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ApoUodorum</ins>
-            <del title="nlp 0.90">ApoUodorum</del>
+            <ins title="nlp 2.00">Apollodorum</ins>
           </span>
         </span>
         <span id="w_52" class="ocr_word" title="bbox 885 585 1053 637">
@@ -662,7 +659,7 @@
         </span>
         <span id="w_112" class="ocr_word" title="bbox 1501 1007 1554 1061" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἢ</ins>
+            <ins title="nlp 2.00">,,ἢ</ins>
           </span>
         </span>
         <span id="w_113" class="ocr_word" title="bbox 1586 1022 1643 1056" lang="grc">
@@ -675,9 +672,9 @@
             <ins class="alt" title="nlp 1.00">φησι</ins>
           </span>
         </span>
-        <span id="w_115" class="ocr_word" title="bbox 1817 1005 2040 1047" lang="grc">
+        <span id="w_115_0" class="ocr_word" title="bbox 1817 1005 2040 1047">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ποσειδώνιος ”</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -885,14 +882,14 @@
             <ins class="alt" title="nlp 1.00">μετεώρων</ins>
           </span>
         </span>
-        <span id="w_153" class="ocr_word" title="bbox 1840 1287 1912 1330" lang="grc">
+        <span id="w_153_0" class="ocr_word" title="bbox 1840 1287 1912 1330">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_154" class="ocr_word" title="bbox 1942 1286 2043 1330" lang="grc">
+        <span id="w_153_1" class="ocr_word" title="bbox 1840 1287 1912 1330">
           <span class="alternatives">
-            <ins title="nlp 2.00">κατ ’</ins>
+            <ins class="alt" title="nlp 2.00">κατ᾿</ins>
           </span>
         </span>
       </span>
@@ -907,9 +904,14 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_157" class="ocr_word" title="bbox 636 1362 747 1406" lang="grc">
+        <span id="w_157_0" class="ocr_word" title="bbox 636 1362 747 1406">
           <span class="alternatives">
-            <ins title="nlp 2.00">καθ ’</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_157_1" class="ocr_word" title="bbox 636 1362 747 1406">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">καθ᾿</ins>
           </span>
         </span>
         <span id="w_158" class="ocr_word" title="bbox 764 1364 1009 1406" lang="grc">
@@ -938,12 +940,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">est</ins>
             <del title="nlp 0.90">est</del>
-          </span>
-        </span>
-        <span id="w_163" class="ocr_word" title="bbox 1932 1359 2043 1401">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">hanc</ins>
-            <del title="nlp 0.90">hanc</del>
           </span>
         </span>
       </span>
@@ -1718,8 +1714,7 @@
         </span>
         <span id="w_293" class="ocr_word" title="bbox 491 2431 557 2474">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">δι᾿</ins>
           </span>
         </span>
         <span id="w_294" class="ocr_word" title="bbox 576 2448 639 2474" lang="grc">
@@ -1791,8 +1786,7 @@
         </span>
         <span id="w_307" class="ocr_word" title="bbox 529 2501 594 2545">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">δι᾿</ins>
           </span>
         </span>
         <span id="w_308" class="ocr_word" title="bbox 612 2519 677 2545" lang="grc">
@@ -1851,8 +1845,7 @@
       <span class="ocr_line" title="bbox 309 2567 2044 2626">
         <span id="w_319" class="ocr_word" title="bbox 423 2574 581 2617">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertii</ins>
-            <del title="nlp 0.90">Laertii</del>
+            <ins title="nlp 2.00">Laërtii</ins>
           </span>
         </span>
         <span id="w_320" class="ocr_word" title="bbox 600 2574 689 2616">
@@ -2279,7 +2272,7 @@
         </span>
         <span id="w_393" class="ocr_word" title="bbox 905 3067 1002 3125" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸν</ins>
+            <ins title="nlp 2.00">(τὸν</ins>
           </span>
         </span>
         <span id="w_394" class="ocr_word" title="bbox 1026 3068 1160 3110" lang="grc">
