--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0035.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0035.html
@@ -12,20 +12,24 @@
       <span class="ocr_line" title="bbox 890 149 1903 187">
         <span id="w_0" class="ocr_word" title="bbox 890 151 1160 186">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">’ATIO</ins>
+            <ins title="nlp 2.00">PRAEFATIO</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1770 149 1903 187">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">XXXV</ins>
-            <del title="nlp 0.90">XXXV</del>
+            <ins title="nlp 2.00">XXXV</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 162 258 1905 319">
-        <span id="w_2" class="ocr_word" title="bbox 162 270 334 319" lang="grc">
+        <span id="w_2_0" class="ocr_word" title="bbox 162 270 334 319">
           <span class="alternatives">
-            <ins title="nlp 2.00">φθτῶν·</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_2_1" class="ocr_word" title="bbox 162 270 334 319">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">φυτῶν·</ins>
           </span>
         </span>
         <span id="w_3" class="ocr_word" title="bbox 374 263 448 305" lang="grc">
@@ -58,9 +62,14 @@
             <ins class="alt" title="nlp 1.00">καθ’</ins>
           </span>
         </span>
-        <span id="w_9" class="ocr_word" title="bbox 1076 258 1180 311" lang="grc">
+        <span id="w_9_0" class="ocr_word" title="bbox 1076 258 1180 311">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἓξιν.</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_9_1" class="ocr_word" title="bbox 1076 258 1180 311">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἕξιν.</ins>
           </span>
         </span>
         <span id="w_10" class="ocr_word" title="bbox 1242 258 1303 302">
@@ -85,17 +94,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">n.</ins>
             <del title="nlp 0.90">n.</del>
-          </span>
-        </span>
-        <span id="w_14" class="ocr_word" title="bbox 1587 260 1685 303">
-          <span class="alternatives">
-            <ins title="nlp 2.00">634.</ins>
-          </span>
-        </span>
-        <span id="w_15" class="ocr_word" title="bbox 1748 259 1905 303">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Addidi</ins>
-            <del title="nlp 0.90">Addidi</del>
           </span>
         </span>
       </span>
@@ -411,8 +409,7 @@
         </span>
         <span id="w_67" class="ocr_word" title="bbox 427 690 641 732">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertium</ins>
-            <del title="nlp 0.90">Laertium</del>
+            <ins title="nlp 2.00">Laërtium</ins>
           </span>
         </span>
         <span id="w_68" class="ocr_word" title="bbox 681 688 880 745">
@@ -546,8 +543,7 @@
         </span>
         <span id="w_90" class="ocr_word" title="bbox 1188 830 1388 875">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">yidelicet</ins>
-            <del title="nlp 0.90">yidelicet</del>
+            <ins title="nlp 2.00">videlicet</ins>
           </span>
         </span>
         <span id="w_91" class="ocr_word" title="bbox 1413 832 1708 888">
@@ -578,8 +574,7 @@
         </span>
         <span id="w_95" class="ocr_word" title="bbox 681 902 844 959">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">yideor;</ins>
-            <del title="nlp 0.90">yideor;</del>
+            <ins title="nlp 2.00">videor;</ins>
           </span>
         </span>
         <span id="w_96" class="ocr_word" title="bbox 885 902 959 958">
@@ -840,8 +835,7 @@
         </span>
         <span id="w_140" class="ocr_word" title="bbox 1597 1193 1773 1245">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">upparet</ins>
-            <del title="nlp 0.90">upparet</del>
+            <ins title="nlp 2.00">apparet</ins>
           </span>
         </span>
         <span id="w_141" class="ocr_word" title="bbox 1822 1203 1909 1232">
@@ -864,15 +858,14 @@
             <del title="nlp 0.90">Stoicorum</del>
           </span>
         </span>
-        <span id="w_144" class="ocr_word" title="bbox 677 1261 971 1304">
+        <span id="w_144_0" class="ocr_word" title="bbox 677 1261 971 1304">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">universorura</ins>
-            <del title="nlp 0.90">universorura</del>
+            <ins class="alt" title="nlp 2.00">universorum</ins>
           </span>
         </span>
-        <span id="w_145" class="ocr_word" title="bbox 1011 1260 1229 1318" lang="grc">
+        <span id="w_144_1" class="ocr_word" title="bbox 677 1261 971 1304">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λέγουσι)</ins>
+            <ins class="alt" title="nlp 2.00">(λέγουσι)</ins>
           </span>
         </span>
         <span id="w_146" class="ocr_word" title="bbox 1268 1261 1319 1304">
@@ -933,7 +926,7 @@
         </span>
         <span id="w_155" class="ocr_word" title="bbox 1152 1331 1219 1389" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
+            <ins title="nlp 2.00">(τὸ</ins>
           </span>
         </span>
         <span id="w_156" class="ocr_word" title="bbox 1252 1337 1566 1389" lang="grc">
@@ -1701,9 +1694,14 @@
             <ins class="alt" title="nlp 1.00">φύσιν</ins>
           </span>
         </span>
-        <span id="w_285" class="ocr_word" title="bbox 439 2475 552 2523" lang="grc">
+        <span id="w_285_0" class="ocr_word" title="bbox 439 2475 552 2523">
           <span class="alternatives">
-            <ins title="nlp 2.00">πῦρ</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_285_1" class="ocr_word" title="bbox 439 2475 552 2523">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">εἶναι</ins>
           </span>
         </span>
         <span id="w_286" class="ocr_word" title="bbox 572 2495 662 2536" lang="grc">
@@ -1714,11 +1712,6 @@
         <span id="w_287" class="ocr_word" title="bbox 688 2481 905 2536" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τεχνικόν,</ins>
-          </span>
-        </span>
-        <span id="w_288" class="ocr_word" title="bbox 931 2479 1020 2522" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁδῷ</ins>
           </span>
         </span>
       </span>
@@ -1890,9 +1883,14 @@
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_320" class="ocr_word" title="bbox 247 2975 378 3023" lang="grc">
+        <span id="w_320_0" class="ocr_word" title="bbox 247 2975 378 3023">
           <span class="alternatives">
-            <ins title="nlp 2.00">εἶναι</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_320_1" class="ocr_word" title="bbox 247 2975 378 3023">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">εἶναι·</ins>
           </span>
         </span>
         <span id="w_321" class="ocr_word" title="bbox 409 2995 490 3034" lang="grc">
@@ -1900,24 +1898,19 @@
             <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
-        <span id="w_322" class="ocr_word" title="bbox 516 2980 564 3022" lang="grc">
+        <span id="w_322_0" class="ocr_word" title="bbox 516 2980 564 3022">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δὲ</ins>
+            <ins class="alt" title="nlp 2.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_323" class="ocr_word" title="bbox 591 2996 679 3022" lang="grc">
+        <span id="w_322_1" class="ocr_word" title="bbox 516 2980 564 3022">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῶν</ins>
+            <ins class="alt" title="nlp 2.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_324" class="ocr_word" title="bbox 704 2984 821 3023" lang="grc">
+        <span id="w_323_0" class="ocr_word" title="bbox 591 2996 679 3022">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὃλων</ins>
-          </span>
-        </span>
-        <span id="w_325" class="ocr_word" title="bbox 846 2985 1021 3036" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἄφαρτον,</ins>
+            <ins class="alt" title="nlp 2.00">ὅλων</ins>
           </span>
         </span>
       </span>
@@ -1985,8 +1978,7 @@
         </span>
         <span id="w_338" class="ocr_word" title="bbox 902 3123 1117 3166">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertium</ins>
-            <del title="nlp 0.90">Laertium</del>
+            <ins title="nlp 2.00">Laërtium</ins>
           </span>
         </span>
         <span id="w_339" class="ocr_word" title="bbox 1153 3123 1348 3179">
