--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0036.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0036.html
@@ -123,8 +123,7 @@
         </span>
         <span id="w_19" class="ocr_word" title="bbox 1455 357 1672 413">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">coUocavi,</ins>
-            <del title="nlp 0.90">coUocavi,</del>
+            <ins title="nlp 2.00">collocavi,</ins>
           </span>
         </span>
         <span id="w_20" class="ocr_word" title="bbox 1703 358 1939 415">
@@ -160,8 +159,7 @@
         </span>
         <span id="w_26" class="ocr_word" title="bbox 956 427 1066 470">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nihU</ins>
-            <del title="nlp 0.90">nihU</del>
+            <ins title="nlp 2.00">nihil</ins>
           </span>
         </span>
         <span id="w_27" class="ocr_word" title="bbox 1109 428 1380 483">
@@ -172,8 +170,7 @@
         </span>
         <span id="w_28" class="ocr_word" title="bbox 1423 427 1661 483">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ahsolvunt,</ins>
-            <del title="nlp 0.90">ahsolvunt,</del>
+            <ins title="nlp 2.00">absolvunt,</ins>
           </span>
         </span>
         <span id="w_29" class="ocr_word" title="bbox 1705 442 1812 483">
