--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0037.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0037.html
@@ -18,8 +18,7 @@
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1750 191 1920 229">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">XXXVII</ins>
-            <del title="nlp 0.90">XXXVII</del>
+            <ins title="nlp 2.00">XXXVII</ins>
           </span>
         </span>
       </span>
@@ -124,8 +123,7 @@
         </span>
         <span id="w_18" class="ocr_word" title="bbox 1618 371 1918 430">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Chrjsippum,</ins>
-            <del title="nlp 0.90">Chrjsippum,</del>
+            <ins title="nlp 2.00">Chrysippum,</ins>
           </span>
         </span>
       </span>
@@ -150,8 +148,7 @@
         </span>
         <span id="w_22" class="ocr_word" title="bbox 946 444 1116 488">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">videtnr</ins>
-            <del title="nlp 0.90">videtnr</del>
+            <ins title="nlp 2.00">videtur</ins>
           </span>
         </span>
         <span id="w_23" class="ocr_word" title="bbox 1147 443 1399 501">
@@ -194,8 +191,7 @@
         </span>
         <span id="w_29" class="ocr_word" title="bbox 348 516 629 561">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">diiudicandis</ins>
-            <del title="nlp 0.90">diiudicandis</del>
+            <ins title="nlp 2.00">diiudicandis</ins>
           </span>
         </span>
         <span id="w_30" class="ocr_word" title="bbox 662 517 853 574">
@@ -212,8 +208,7 @@
         </span>
         <span id="w_32" class="ocr_word" title="bbox 1294 515 1445 559">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">litibuB</ins>
-            <del title="nlp 0.90">litibuB</del>
+            <ins title="nlp 2.00">litibus</ins>
           </span>
         </span>
         <span id="w_33" class="ocr_word" title="bbox 1483 515 1705 559">
@@ -845,8 +840,7 @@
         </span>
         <span id="w_137" class="ocr_word" title="bbox 316 1375 552 1419">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertianis</ins>
-            <del title="nlp 0.90">Laertianis</del>
+            <ins title="nlp 2.00">Laërtianis</ins>
           </span>
         </span>
         <span id="w_138" class="ocr_word" title="bbox 584 1380 810 1433">
@@ -1111,8 +1105,7 @@
         </span>
         <span id="w_182" class="ocr_word" title="bbox 1046 1735 1241 1777">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertius</ins>
-            <del title="nlp 0.90">Laertius</del>
+            <ins title="nlp 2.00">Laërtius</ins>
           </span>
         </span>
         <span id="w_183" class="ocr_word" title="bbox 1281 1734 1350 1777">
@@ -1171,19 +1164,18 @@
             <del title="nlp 0.90">et</del>
           </span>
         </span>
-        <span id="w_192" class="ocr_word" title="bbox 1299 1806 1608 1863">
+        <span id="w_192_0" class="ocr_word" title="bbox 1299 1806 1608 1863">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">discrepantias</ins>
-            <del title="nlp 0.90">discrepantias</del>
+            <ins class="alt" title="nlp 2.00">discrepantias</ins>
+          </span>
+        </span>
+        <span id="w_192_1" class="ocr_word" title="bbox 1299 1806 1608 1863">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">philosophorum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 161 1877 897 1921">
-        <span id="w_194" class="ocr_word" title="bbox 161 1891 256 1919">
-          <span class="alternatives">
-            <ins title="nlp 2.00">philosophorum</ins>
-          </span>
-        </span>
         <span id="w_195" class="ocr_word" title="bbox 288 1891 340 1919">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">ex</ins>
@@ -1318,9 +1310,9 @@
             <ins title="nlp 2.00">§</ins>
           </span>
         </span>
-        <span id="w_218" class="ocr_word" title="bbox 1733 2023 1789 2065" lang="grc">
+        <span id="w_218_0" class="ocr_word" title="bbox 1733 2023 1789 2065">
           <span class="alternatives">
-            <ins title="nlp 2.00">39—41</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1802,17 +1794,7 @@
       <span class="ocr_line" title="bbox 157 2663 1903 2725">
         <span id="w_297" class="ocr_word" title="bbox 157 2663 267 2720" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φασὶ</ins>
-          </span>
-        </span>
-        <span id="w_298" class="ocr_word" title="bbox 280 2690 328 2695">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
-        <span id="w_299" class="ocr_word" title="bbox 340 2665 458 2708" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καθά</ins>
+            <ins class="alt" title="nlp 2.00">φασὶ—καθά</ins>
           </span>
         </span>
         <span id="w_300" class="ocr_word" title="bbox 478 2677 587 2722" lang="grc">
@@ -2008,7 +1990,7 @@
         </span>
         <span id="w_333" class="ocr_word" title="bbox 508 2880 577 2932" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὃς.</ins>
+            <ins title="nlp 2.00">ὡς.</ins>
           </span>
         </span>
         <span id="w_334" class="ocr_word" title="bbox 638 2880 789 2937">
@@ -2055,8 +2037,7 @@
         </span>
         <span id="w_341" class="ocr_word" title="bbox 1744 2881 1901 2925">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Boethi</ins>
-            <del title="nlp 0.90">Boethi</del>
+            <ins title="nlp 2.00">Boëthi</ins>
           </span>
         </span>
       </span>
@@ -2275,8 +2256,7 @@
         </span>
         <span id="w_379" class="ocr_word" title="bbox 1743 3168 1899 3212">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Boethi</ins>
-            <del title="nlp 0.90">Boethi</del>
+            <ins title="nlp 2.00">Boëthi</ins>
           </span>
         </span>
       </span>
