--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0038.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0038.html
@@ -12,8 +12,7 @@
       <span class="ocr_line" title="bbox 392 215 1389 250">
         <span id="w_0" class="ocr_word" title="bbox 392 215 575 250">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">XXXVITI</ins>
-            <del title="nlp 0.90">XXXVITI</del>
+            <ins title="nlp 2.00">XXXVIII</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1126 215 1389 250">
@@ -1025,7 +1024,7 @@
         </span>
         <span id="w_171" class="ocr_word" title="bbox 1370 1524 1506 1577" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καθά</ins>
+            <ins title="nlp 2.00">(καθά</ins>
           </span>
         </span>
         <span id="w_172" class="ocr_word" title="bbox 1526 1537 1663 1581" lang="grc">
@@ -1624,17 +1623,11 @@
         </span>
         <span id="w_276" class="ocr_word" title="bbox 1988 2234 2127 2290">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">negle-</ins>
+            <ins title="nlp 2.00">neglegentiam</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 400 2305 2128 2363">
-        <span id="w_277" class="ocr_word" title="bbox 400 2306 587 2363">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">gentiam</ins>
-            <del title="nlp 0.90">neglegentiam</del>
-          </span>
-        </span>
         <span id="w_278" class="ocr_word" title="bbox 608 2305 710 2348">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">satis</ins>
@@ -2056,8 +2049,7 @@
         </span>
         <span id="w_350" class="ocr_word" title="bbox 1055 2803 1172 2845">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iUam</ins>
-            <del title="nlp 0.90">iUam</del>
+            <ins title="nlp 2.00">illam</ins>
           </span>
         </span>
         <span id="w_351" class="ocr_word" title="bbox 1204 2803 1533 2845">
@@ -2334,18 +2326,18 @@
             <ins title="nlp 2.00">—</ins>
           </span>
         </span>
-        <span id="w_399" class="ocr_word" title="bbox 1952 3113 2014 3148" lang="grc">
+        <span id="w_399_0" class="ocr_word" title="bbox 1952 3113 2014 3148">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
+          </span>
+        </span>
+        <span id="w_399_1" class="ocr_word" title="bbox 1952 3113 2014 3148">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">Διογένης</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 402 3165 1191 3213">
-        <span id="w_401" class="ocr_word" title="bbox 402 3165 511 3213" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Διογένης</ins>
-          </span>
-        </span>
         <span id="w_402" class="ocr_word" title="bbox 535 3168 599 3202" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
