--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0040.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0040.html
@@ -107,8 +107,7 @@
         </span>
         <span id="w_16" class="ocr_word" title="bbox 952 370 1171 414">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertium</ins>
-            <del title="nlp 0.90">Laertium</del>
+            <ins title="nlp 2.00">Laërtium</ins>
           </span>
         </span>
         <span id="w_17" class="ocr_word" title="bbox 1202 371 1343 413">
@@ -239,19 +238,18 @@
             <del title="nlp 0.90">ad</del>
           </span>
         </span>
-        <span id="w_38" class="ocr_word" title="bbox 1717 528 1863 557">
+        <span id="w_38_0" class="ocr_word" title="bbox 1717 528 1863 557">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">omnes</ins>
-            <del title="nlp 0.90">omnes</del>
+            <ins class="alt" title="nlp 2.00">omnes</ins>
+          </span>
+        </span>
+        <span id="w_38_1" class="ocr_word" title="bbox 1717 528 1863 557">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">referendum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 354 583 562 627">
-        <span id="w_40" class="ocr_word" title="bbox 354 583 454 627">
-          <span class="alternatives">
-            <ins title="nlp 2.00">referendum</ins>
-          </span>
-        </span>
         <span id="w_41" class="ocr_word" title="bbox 485 587 562 627">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">est.</ins>
@@ -318,8 +316,7 @@
       <span class="ocr_line" title="bbox 352 724 2087 782">
         <span id="w_51" class="ocr_word" title="bbox 352 726 524 769">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertio</ins>
-            <del title="nlp 0.90">Laertio</del>
+            <ins title="nlp 2.00">Laërtio</ins>
           </span>
         </span>
         <span id="w_52" class="ocr_word" title="bbox 563 728 733 769">
@@ -620,8 +617,7 @@
       <span class="ocr_line" title="bbox 355 1078 2092 1138">
         <span id="w_102" class="ocr_word" title="bbox 355 1080 575 1124">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertium</ins>
-            <del title="nlp 0.90">Laertium</del>
+            <ins title="nlp 2.00">Laërtium</ins>
           </span>
         </span>
         <span id="w_103" class="ocr_word" title="bbox 605 1081 820 1138">
@@ -925,8 +921,7 @@
         </span>
         <span id="w_154" class="ocr_word" title="bbox 938 1434 1265 1489">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertianisque</ins>
-            <del title="nlp 0.90">Laertianisque</del>
+            <ins title="nlp 2.00">Laërtianisque</ins>
           </span>
         </span>
         <span id="w_155" class="ocr_word" title="bbox 1304 1433 1539 1476">
@@ -1293,8 +1288,7 @@
         </span>
         <span id="w_216" class="ocr_word" title="bbox 615 1862 778 1905">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertii</ins>
-            <del title="nlp 0.90">Laertii</del>
+            <ins title="nlp 2.00">Laërtii</ins>
           </span>
         </span>
         <span id="w_217" class="ocr_word" title="bbox 810 1864 836 1916" lang="grc">
@@ -1335,9 +1329,14 @@
             <ins class="alt" title="nlp 1.00">1.</ins>
           </span>
         </span>
-        <span id="w_224" class="ocr_word" title="bbox 1416 1861 1561 1903">
+        <span id="w_224_0" class="ocr_word" title="bbox 1416 1861 1561 1903">
           <span class="alternatives">
-            <ins title="nlp 2.00">—20</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_224_1" class="ocr_word" title="bbox 1416 1861 1561 1903">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">8—20</ins>
           </span>
         </span>
         <span id="w_225" class="ocr_word" title="bbox 1586 1860 1875 1902">
@@ -1350,12 +1349,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">(Vol.</ins>
             <del title="nlp 0.90">(Vol.</del>
-          </span>
-        </span>
-        <span id="w_227" class="ocr_word" title="bbox 2035 1858 2100 1902">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">III</ins>
-            <del title="nlp 0.90">III</del>
           </span>
         </span>
       </span>
@@ -1443,8 +1436,7 @@
       <span class="ocr_line" title="bbox 364 2000 2101 2059">
         <span id="w_242" class="ocr_word" title="bbox 364 2004 525 2048">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertii</ins>
-            <del title="nlp 0.90">Laertii</del>
+            <ins title="nlp 2.00">Laërtii</ins>
           </span>
         </span>
         <span id="w_243" class="ocr_word" title="bbox 556 2007 582 2058" lang="grc">
@@ -1600,9 +1592,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 366 2141 2102 2202">
-        <span id="w_269" class="ocr_word" title="bbox 366 2147 539 2190">
+        <span id="w_269_0" class="ocr_word" title="bbox 366 2147 539 2190">
           <span class="alternatives">
-            <ins title="nlp 2.00">22—27</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_269_1" class="ocr_word" title="bbox 366 2147 539 2190">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">22—27</ins>
           </span>
         </span>
         <span id="w_270" class="ocr_word" title="bbox 586 2161 683 2190">
@@ -1617,15 +1614,24 @@
             <del title="nlp 0.90">Stobaei</del>
           </span>
         </span>
-        <span id="w_272" class="ocr_word" title="bbox 944 2161 984 2201">
+        <span id="w_272_0" class="ocr_word" title="bbox 944 2161 984 2201">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">p.</ins>
-            <del title="nlp 0.90">p.</del>
+            <ins class="alt" title="nlp 2.00">p.</ins>
           </span>
         </span>
-        <span id="w_273" class="ocr_word" title="bbox 1012 2145 1321 2202">
+        <span id="w_272_1" class="ocr_word" title="bbox 944 2161 984 2201">
           <span class="alternatives">
-            <ins title="nlp 2.00">—70,7</ins>
+            <ins class="alt" title="nlp 2.00">69,</ins>
+          </span>
+        </span>
+        <span id="w_273_0" class="ocr_word" title="bbox 1012 2145 1321 2202">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_273_1" class="ocr_word" title="bbox 1012 2145 1321 2202">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">17—70,7</ins>
           </span>
         </span>
         <span id="w_274" class="ocr_word" title="bbox 1349 2145 1417 2186">
@@ -1642,8 +1648,7 @@
         </span>
         <span id="w_276" class="ocr_word" title="bbox 1540 2144 1702 2187">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertii</ins>
-            <del title="nlp 0.90">Laertii</del>
+            <ins title="nlp 2.00">Laërtii</ins>
           </span>
         </span>
         <span id="w_277" class="ocr_word" title="bbox 1744 2146 1770 2197">
@@ -1654,18 +1659,6 @@
         <span id="w_278" class="ocr_word" title="bbox 1795 2143 1852 2185">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">94</ins>
-          </span>
-        </span>
-        <span id="w_279" class="ocr_word" title="bbox 1897 2142 2012 2199">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(Vol.</ins>
-            <del title="nlp 0.90">(Vol.</del>
-          </span>
-        </span>
-        <span id="w_280" class="ocr_word" title="bbox 2038 2141 2102 2185">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">III</ins>
-            <del title="nlp 0.90">III</del>
           </span>
         </span>
       </span>
@@ -1758,15 +1751,9 @@
             <del title="nlp 0.90">totas</del>
           </span>
         </span>
-        <span id="w_296" class="ocr_word" title="bbox 715 2287 1006 2330">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">enarrationes</ins>
-            <del title="nlp 0.90">enarrationes</del>
-          </span>
-        </span>
         <span id="w_297" class="ocr_word" title="bbox 1018 2321 1029 2343">
           <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins title="nlp 2.00">enarrationes,</ins>
           </span>
         </span>
         <span id="w_298" class="ocr_word" title="bbox 1060 2286 1134 2328">
@@ -1845,8 +1832,7 @@
         </span>
         <span id="w_310" class="ocr_word" title="bbox 1339 2357 1501 2399">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertii</ins>
-            <del title="nlp 0.90">Laertii</del>
+            <ins title="nlp 2.00">Laërtii</ins>
           </span>
         </span>
         <span id="w_311" class="ocr_word" title="bbox 1539 2359 1594 2411" lang="grc">
@@ -1856,17 +1842,7 @@
         </span>
         <span id="w_312" class="ocr_word" title="bbox 1620 2356 1676 2399">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">85</ins>
-          </span>
-        </span>
-        <span id="w_313" class="ocr_word" title="bbox 1678 2381 1735 2387">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
-        <span id="w_314" class="ocr_word" title="bbox 1741 2356 1824 2398">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">116</ins>
+            <ins class="alt" title="nlp 2.00">85—116</ins>
           </span>
         </span>
         <span id="w_315" class="ocr_word" title="bbox 1855 2358 1899 2397">
@@ -1891,17 +1867,7 @@
         </span>
         <span id="w_318" class="ocr_word" title="bbox 429 2430 484 2474">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">57</ins>
-          </span>
-        </span>
-        <span id="w_319" class="ocr_word" title="bbox 487 2455 547 2461">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
-        <span id="w_320" class="ocr_word" title="bbox 548 2431 616 2473">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">93.</ins>
+            <ins class="alt" title="nlp 2.00">57—93.</ins>
           </span>
         </span>
         <span id="w_321" class="ocr_word" title="bbox 677 2429 792 2472">
@@ -2017,8 +1983,7 @@
         </span>
         <span id="w_340" class="ocr_word" title="bbox 911 2571 1032 2613">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nuUa</ins>
-            <del title="nlp 0.90">nuUa</del>
+            <ins title="nlp 2.00">nulla</ins>
           </span>
         </span>
         <span id="w_341" class="ocr_word" title="bbox 1070 2570 1141 2613">
@@ -2225,8 +2190,7 @@
         </span>
         <span id="w_375" class="ocr_word" title="bbox 1691 2782 1887 2825">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertius</ins>
-            <del title="nlp 0.90">Laertius</del>
+            <ins title="nlp 2.00">Laërtius</ins>
           </span>
         </span>
         <span id="w_376" class="ocr_word" title="bbox 1913 2797 1938 2824">
@@ -2245,8 +2209,7 @@
       <span class="ocr_line" title="bbox 373 2851 2107 2915">
         <span id="w_378" class="ocr_word" title="bbox 373 2856 610 2915">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’)</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">appetitu2)</ins>
           </span>
         </span>
         <span id="w_379" class="ocr_word" title="bbox 643 2859 685 2899">
@@ -2343,17 +2306,7 @@
         </span>
         <span id="w_394" class="ocr_word" title="bbox 1173 2925 1228 2969">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">75</ins>
-          </span>
-        </span>
-        <span id="w_395" class="ocr_word" title="bbox 1230 2951 1288 2957">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
-        <span id="w_396" class="ocr_word" title="bbox 1292 2925 1346 2969">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">78</ins>
+            <ins class="alt" title="nlp 2.00">75—78</ins>
           </span>
         </span>
         <span id="w_397" class="ocr_word" title="bbox 1372 2924 1585 2981">
@@ -2413,8 +2366,7 @@
         </span>
         <span id="w_406" class="ocr_word" title="bbox 1060 3042 1353 3079">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">TuBculanarum</ins>
-            <del title="nlp 0.90">TuBculanarum</del>
+            <ins title="nlp 2.00">Tusculanarum</ins>
           </span>
         </span>
         <span id="w_407" class="ocr_word" title="bbox 1378 3041 1442 3078">
@@ -2437,8 +2389,7 @@
         </span>
         <span id="w_410" class="ocr_word" title="bbox 1773 3040 1985 3084">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">afFectuum,</ins>
-            <del title="nlp 0.90">afFectuum,</del>
+            <ins title="nlp 2.00">affectuum,</ins>
           </span>
         </span>
         <span id="w_411" class="ocr_word" title="bbox 2010 3051 2107 3076">
@@ -2448,12 +2399,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 375 3094 1627 3144">
-        <span id="w_412" class="ocr_word" title="bbox 375 3099 517 3144">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">bomm,</ins>
-            <del title="nlp 0.90">morbomm,</del>
-          </span>
-        </span>
         <span id="w_413" class="ocr_word" title="bbox 543 3098 839 3144">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">aegrotationum</ins>
@@ -2480,8 +2425,7 @@
         </span>
         <span id="w_417" class="ocr_word" title="bbox 1248 3095 1447 3142">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sumpsisBe</ins>
-            <del title="nlp 0.90">sumpsisBe</del>
+            <ins title="nlp 2.00">sumpsisse</ins>
           </span>
         </span>
         <span id="w_418" class="ocr_word" title="bbox 1471 3094 1627 3130">
