--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0053.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0053.html
@@ -68,8 +68,7 @@
         </span>
         <span id="w_9" class="ocr_word" title="bbox 555 1129 694 1173">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_10" class="ocr_word" title="bbox 721 1129 803 1174">
@@ -231,8 +230,7 @@
         </span>
         <span id="w_40" class="ocr_word" title="bbox 1087 1347 1160 1389">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">xal</ins>
-            <del title="nlp 0.90">xal</del>
+            <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_41" class="ocr_word" title="bbox 1190 1350 1482 1397" lang="grc">
@@ -351,16 +349,11 @@
         </span>
         <span id="w_63" class="ocr_word" title="bbox 1793 1493 1958 1545" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Παροι-</ins>
+            <ins title="nlp 2.00">Παροιμιῶν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 394 1560 1957 1617">
-        <span id="w_64" class="ocr_word" title="bbox 394 1576 508 1615" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μιῶν</ins>
-          </span>
-        </span>
         <span id="w_65" class="ocr_word" title="bbox 529 1586 582 1591">
           <span class="alternatives">
             <ins title="nlp 2.00">—</ins>
@@ -794,16 +787,11 @@
         </span>
         <span id="w_149" class="ocr_word" title="bbox 1840 2135 1959 2190" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Κρά-</ins>
+            <ins title="nlp 2.00">Κράτητι</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 217 2204 1959 2262">
-        <span id="w_150" class="ocr_word" title="bbox 217 2221 311 2260" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τητι</ins>
-          </span>
-        </span>
         <span id="w_151" class="ocr_word" title="bbox 342 2204 561 2260" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">παρέβαλε</ins>
@@ -940,11 +928,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 217 2418 1960 2476">
-        <span id="w_178" class="ocr_word" title="bbox 217 2430 401 2470" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">δεύτερον</ins>
-          </span>
-        </span>
         <span id="w_179" class="ocr_word" title="bbox 433 2418 480 2462" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δὲ</ins>
@@ -1069,14 +1052,14 @@
             <ins class="alt" title="nlp 1.00">φησι·</ins>
           </span>
         </span>
-        <span id="w_203" class="ocr_word" title="bbox 1629 2579 1798 2618" lang="grc">
+        <span id="w_204_0" class="ocr_word" title="bbox 1824 2579 1962 2619">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τούτῳ</ins>
+            <ins class="alt" title="nlp 2.00">„τούτῳ</ins>
           </span>
         </span>
-        <span id="w_204" class="ocr_word" title="bbox 1824 2579 1962 2619" lang="grc">
+        <span id="w_204_1" class="ocr_word" title="bbox 1824 2579 1962 2619">
           <span class="alternatives">
-            <ins title="nlp 2.00">παρακολούθησον.“</ins>
+            <ins class="alt" title="nlp 2.00">παρακολούθησον.“</ins>
           </span>
         </span>
       </span>
@@ -1222,16 +1205,11 @@
         </span>
         <span id="w_233" class="ocr_word" title="bbox 1879 2795 1961 2833" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φα-</ins>
+            <ins title="nlp 2.00">φακῆς</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 218 2848 1960 2906">
-        <span id="w_234" class="ocr_word" title="bbox 218 2855 297 2903" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κῆς</ins>
-          </span>
-        </span>
         <span id="w_235" class="ocr_word" title="bbox 329 2849 402 2892" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">διὰ</ins>
@@ -1321,7 +1299,7 @@
         </span>
         <span id="w_252" class="ocr_word" title="bbox 1770 2936 1960 2976" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φεῦγον</ins>
+            <ins title="nlp 2.00">φεύγον-</ins>
           </span>
         </span>
       </span>
@@ -1342,14 +1320,14 @@
             <del title="nlp 0.90">P.</del>
           </span>
         </span>
-        <span id="w_256" class="ocr_word" title="bbox 667 3052 679 3096">
+        <span id="w_256_0" class="ocr_word" title="bbox 667 3052 679 3096">
           <span class="alternatives">
-            <ins title="nlp 2.00">PF. </ins>
+            <ins class="alt" title="nlp 2.00">||</ins>
           </span>
         </span>
-        <span id="w_257" class="ocr_word" title="bbox 709 3049 873 3096" lang="grc">
+        <span id="w_256_1" class="ocr_word" title="bbox 667 3052 679 3096">
           <span class="alternatives">
-            <ins title="nlp 2.00">εὐπαγὴς</ins>
+            <ins class="alt" title="nlp 2.00">δημαίου</ins>
           </span>
         </span>
         <span id="w_258" class="ocr_word" title="bbox 898 3049 967 3086">
@@ -1370,18 +1348,17 @@
         </span>
         <span id="w_261" class="ocr_word" title="bbox 1319 3049 1424 3085">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">BPD.</ins>
-            <del title="nlp 0.90">BPD.</del>
+            <ins title="nlp 2.00">ΒFD.</ins>
           </span>
         </span>
-        <span id="w_262" class="ocr_word" title="bbox 1538 3054 1580 3085">
+        <span id="w_262_0" class="ocr_word" title="bbox 1538 3054 1580 3085">
           <span class="alternatives">
-            <ins title="nlp 2.00">16</ins>
+            <ins class="alt" title="nlp 2.00">15</ins>
           </span>
         </span>
-        <span id="w_263" class="ocr_word" title="bbox 1605 3048 1964 3097" lang="grc">
+        <span id="w_262_1" class="ocr_word" title="bbox 1538 3054 1580 3085">
           <span class="alternatives">
-            <ins title="nlp 2.00">χρηστηριαζομένου</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1455,9 +1432,9 @@
             <ins title="nlp 2.00">BD,</ins>
           </span>
         </span>
-        <span id="w_277" class="ocr_word" title="bbox 1839 3103 1967 3150" lang="grc">
+        <span id="w_277_0" class="ocr_word" title="bbox 1839 3103 1967 3150">
           <span class="alternatives">
-            <ins title="nlp 2.00">τούτ</ins>
+            <ins class="alt" title="nlp 2.00">τούτ(??)</ins>
           </span>
         </span>
       </span>
@@ -1468,9 +1445,14 @@
             <del title="nlp 0.90">P;</del>
           </span>
         </span>
-        <span id="w_279" class="ocr_word" title="bbox 292 3159 409 3194" lang="grc">
+        <span id="w_279_0" class="ocr_word" title="bbox 292 3159 409 3194">
           <span class="alternatives">
-            <ins title="nlp 2.00">αὐτοῦ—τοῦο</ins>
+            <ins class="alt" title="nlp 2.00">αὐτοῦ—τοῦτο</ins>
+          </span>
+        </span>
+        <span id="w_279_1" class="ocr_word" title="bbox 292 3159 409 3194">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_280" class="ocr_word" title="bbox 594 3158 632 3194">
@@ -1487,12 +1469,6 @@
         <span id="w_282" class="ocr_word" title="bbox 800 3160 1121 3204" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">περικαλύπτοντα</ins>
-          </span>
-        </span>
-        <span id="w_283" class="ocr_word" title="bbox 1146 3157 1219 3193">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">DF.</ins>
-            <del title="nlp 0.90">DF.</del>
           </span>
         </span>
       </span>
